Write initial HTML

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link href="./assets/css/main.css" rel="stylesheet"/>
   </head>
   <body>
-    <h1>My Awesome Pixel Art</h1>
+    <header class="demo-header">
+      <h1>Example</h1>
+      <p>
+        Nec ultrices dui sapien eget mi proin sed libero enim, sed faucibus turpis in eu mi bibendum. Tempus egestas sed sed risus pretium quam vulputate dignissim suspendisse in est ante?
+      </p>
+      <ul class="icons">
+        <li class="icons--1"></li>
+        <li class="icons--2"></li>
+        <li class="icons--3"></li>
+        <li class="icons--4"></li>
+      </ul>
+    </header>
   </body>
 </html>
