--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
         Nec ultrices dui sapien eget mi proin sed libero enim, sed faucibus turpis in eu mi bibendum. Tempus egestas sed sed risus pretium quam vulputate dignissim suspendisse in est ante?
       </p>
       <ul class="icons">
+        <!-- You need at least 1 li element to show the squares. -->
         <li class="icons--1"></li>
-        <li class="icons--2"></li>
-        <li class="icons--3"></li>
-        <li class="icons--4"></li>
       </ul>
     </header>
   </body>
