generalize pixmaps and create mixin

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </p>
       <ul class="icons">
         <!-- You need at least 1 li element to show the squares. -->
-        <li class="icons--1"></li>
+        <li class="icons--diamond"></li>
       </ul>
     </header>
   </body>
